--- a/.github/workflows/custom.yml
+++ b/.github/workflows/custom.yml
@@ -12,13 +12,8 @@ jobs:
         uses: actions/checkout@v3 
         with:
           fetch-depth: 2
-      - name: Autonotify/Woocommerce/Covalub
-        uses: SamKirkland/FTP-Deploy-Action@4.3.3
-        with:
-          server: ${{ secrets.FTP_SERVER_MYSOUREI}}
-          username: ${{ secrets.FTP_USERNAME_COVALUB }}
-          password: ${{ secrets.FTP_PASSWORD }}
-      - name: Autonotify/Woocommerce/OriginalSaoPaulo
+
+      - name: Staging
         uses: SamKirkland/FTP-Deploy-Action@4.3.3
         with:
           server: ${{ secrets.FTP_SERVER_STAGING}}
