--- a/.github/workflows/custom.yml
+++ b/.github/workflows/custom.yml
@@ -18,5 +18,5 @@ jobs:
         with:
           server: ${{ secrets.FTP_SERVER_STAGING}}
           username: ${{ secrets.FTP_USERNAME_STAGING }}
-          password: ${{ secrets.FTP_PASSWORD_P }}
+          password: ${{ secrets.FTP_PASSWORD }}
           
